[tool.poetry]
name = "jd-spider"
version = "0.1.0"
description = ""
authors = ["wyf7685 <69091901+wyf7685@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.15.2"
lxml = "^4.9.3"
aiohttp = "^3.9.0"
bs4 = "^0.0.1"
requests = "^2.31.0"
loguru = "^0.7.2"
pillow = "^10.1.0"
pillow-avif-plugin = "^1.4.1"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
